tests/paczka1/small_fuzzy/44301733.err
Error in line 2: zw9TY A844 71,4
Error in line 8: zw9TY S456 28,7
